# BASIC-2018

./: Basic.cpp  CMakeLists.txt  Makefile  exp.cpp  parser.cpp  parser.h  program.cpp  statement.cpp  statement.h  test.cpp
Basic/: Basic.cpp  evalstate.cpp  program.h  statement.cpp
StanfordCPPLib/: simpio.cpp
Test/: Makefile  score.cc
