cmake_minimum_required(VERSION 3.12)
project(Basic)
set(CMAKE_CXX_STANDARD 14)
add_compile_options(-O2)
add_executable(basic_program Basic/Basic.cpp Basic/evalstate.cpp Basic/exp.cpp Basic/parser.cpp Basic/program.cpp Basic/statement.cpp StanfordCPPLib/direction.cpp StanfordCPPLib/error.cpp StanfordCPPLib/gmath.cpp StanfordCPPLib/gtypes.cpp StanfordCPPLib/hashmap.cpp StanfordCPPLib/lexicon.cpp StanfordCPPLib/point.cpp StanfordCPPLib/random.cpp StanfordCPPLib/simpio.cpp StanfordCPPLib/strlib.cpp StanfordCPPLib/tokenscanner.cpp)